# choice

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.txt  manifest.xml  optional_requirements.txt  package.xml  protocol.md  readme_todo.txt  requirements.txt  setup.py  setup.sql  setup_sql.sh  uninstall_sql.sh  usb_cam_calibration.yaml
analysis/: TODO.txt  choice.py  choice_analysis  choice_util.py  figures_note  plot_currents.py
arduino/: README.md  TODO.txt
arduino/choice_uc/: choice_uc.ino
arduino/libraries/: README.md
arduino/libraries/multishock/: keywords.txt  library.properties
arduino/libraries/multishock/test/: CMakeLists.txt  README.md  TODO.txt  gtest.cmake  test_multishock.cpp
arduino/loader/: loader.ino
arduino/photodiode_tests/: data.txt  fly_entry_slider_stationary.txt  manually_moving_empty_slider_back.txt  read.py
arduino/stepper_test/: stepper_test.ino
arduino/stimuli/: stimuli.ino
arduino/stimuli_multishock/: stimuli_with_shocks.ino
arduino/stimuli_simple_shock/: stimuli_simple_shock.ino
arduino/stimuli_with_shocks/: stimuli_with_shocks.ino
choice_uc/: choice_uc.ino
design/: README.txt  TODO.txt
design/helpers/: .gitignore  TODO.txt  circuit_parameters.py  electrode_vertices.py  freecad_array.py  install_kicad_scripts.sh  kicad_util.py  laser_etch_test_array.dxf  laser_etch_test_array.py  make_board.py  slider_corners.py  test_array_scratch.fcstd
design/lasercut/: 20180220_ceiling_pcbs_1to3.las  20180220_ceiling_pcbs_4to9.las  README.md  bottom_plate.dxf  box_side.dxf  ceiling_pcb_edges.dxf  chamber_parts.fcstd  delrin_chambers_and_manifold.dxf  floor_pcb_edges.dxf  humidifier_bottle_brace.dxf  humidifier_bottle_mount_bottom.dxf  inside_plate_with_slots.dxf  maple_big_valve_mount.dxf  mfc_mounting_plate.dxf  modular_vacuum_trap.dxf  olfactometer_mounting_plates.fcstd  olfactory_shock_conditioning_chambers.cdr  olfactory_shock_conditioning_chambers.dxf  olfactory_shock_conditioning_chambers_NO_SVG_INTERMEDIATE.dxf  pcb_outline.dxf  pcb_side_spacers.dxf  shaft_output_doubler.dxf  smaller_boardcam_mount.dxf  smaller_boardcam_mount.eps  tapped_metal_baseplate_dxf07.dxf  top_lighting_diffuser.eps  top_plus_slider.dxf  vacuum_trap_for_engraving_0.3.dxf  vacuum_trap_for_engraving_0.3.eps  yellow_manifold_layer.dxf
design/lasercut/exploded/: one_ver_of_toxic_layers_exploded.dxf  pcb_side_gaskets.dxf  pcb_side_gaskets_array.dxf
design/lasercut/helpers/: electrode_vertices.py
design/lasercut/make_3d/: 0.2a_slider_compression.scad  0_servo_arm.scad  1.1_top_acrylic_manifold_sides.scad  1.2a_top_pcb_edges_and_routing.scad  1.3_servo_arm_spacer.scad  2.1_delrin_chambers_and_manifold.scad  2.2_delrin_sliders.scad  3.1_yellow_manifold_layer.scad  4.1_pcb_side_spacers.scad  4.2_bottom_pcb_edges_and_routing.scad  5_support_acrylic.scad  6.1_vacuum_trap_guides.scad  6.2_vacuum_trap_tops.scad  7_vacuum_trap_sliders.scad  8_flow_regulator_retainers.scad  9_trap_bottomplate.scad  make_3d.py  notes.txt  olfactory_shock_conditioning_chambers.scad  requirements.txt
design/machined/: tapped_metal_baseplate_dxf07.dxf  tapped_metal_baseplate_dxfR12.dxf  top_acrylic_manifold_sides_dxf07.dxf  top_acrylic_manifold_sides_dxfR12.dxf
design/pcb/: TODO.txt  notes.txt
design/pcb/addressable_ceiling/: ceiling_pcb.kicad_pcb  ceiling_pcb.net  ceiling_pcb.pro
design/pcb/addressable_floor/: floor_pcb.kicad_pcb  sym-lib-table
design/pcb/ceiling_pcb/: ceiling_pcb-cache.lib  ceiling_pcb.kicad_pcb  ceiling_pcb.lib  ceiling_pcb.net  ceiling_pcb.sch
design/pcb/choice.pretty/: .kicad_mod  electrode.kicad_mod
design/pcb/datasheets/: TODO.txt
design/pcb/floor_pcb/: floor_pcb-cache.lib  floor_pcb.kicad_pcb  floor_pcb.lib  floor_pcb.net  floor_pcb.pro  floor_pcb.sch  sym-lib-table
design/pcb/footprints.pretty/: DIP-2x10_2.54mm_1mm_clearance.kicad_mod  SIP-10_2.54mm_1mm_clearance.kicad_mod  SIP-2_terminal_block.kicad_mod  SIP-3.kicad_mod  contacts_9_P2.54mm_L6mm_W1.94mm.kicad_mod  electrode.kicad_mod  electrodes_clearance0.6mm.kicad_mod  electrodes_clearance0.6mm_W0.4mm_centerflush.kicad_mod  electrodes_clearance0.6mm_W0.4mm_lengthwise.kicad_mod
design/pcb/gerber/: TODO.txt  notes.txt  package_files.sh  uppercase_extensions.py
design/pcb/open_loop_ceiling/: ceiling_pcb.kicad_pcb  ceiling_pcb.net  ceiling_pcb.sch  sym-lib-table
design/pcb/pcb/: floor_pcb-cache.lib  fp-lib-table  pcb.bak  pcb.dsn  pcb.kicad_pcb  pcb.kicad_pcb-bak  pcb.net  pcb.pro  pcb.sch
design/pcb/schematic_lib/: choice_shield.dcm  choice_shield.lib  shock_grid.lib
design/pcb/shield_pcb/: d8f4e35_to_8a32243b_wizard_fuckup.txt  digital_input_isolation.sch  fp-lib-table  shield_pcb-cache.lib  (+14 more)
design/print/: funnel_servo_arm.stl  rough_tubing_support.fcstd  rough_tubing_support.stl  slotted_vial_to_funnel_adapter.fcstd  slotted_vial_to_funnel_adapter.stl  susan_bearing_support.stl  susan_pulley_around_acrylic.stl  vial_susan_servo_pulley.stl
design/reference/: AUTHORS.txt  all_pin_assignments.odt  bottom_two_thirds_of_vacuum_trap.fcstd  fly_resistance_measurements.py  measurement_circuitry_notes.txt  sg90_servo_head.fcstd
etc/: debug_rosconsole.conf
example/: analysis_rejects.yaml  debug_flags.yaml  stimulus_parameters.yaml  testing.yaml  validation.yaml
launch/: choice.launch  stimuli.launch
maple/: choice.py
msg/: ChannelMeasurementMicros.msg  ChannelMeasurementStamped.msg
nodes/: channel_measurement_splitter.py  odor_randomizer_choice.py  save_bag.py  shocks.py  stimuli.py  stimuli_loader.py  trial_server.py
scripts/: TODO.txt  analyze_incoming.sh  copy_configs.py
setup/: install_usb_cam.sh
src/: TODO.txt  choice.py
(+249 files in other folders)
