<?xml version="1.0"?>
<package>
  <name>choice</name>
  <version>0.0.0</version>
  <description>
    CAD files, experimental code, and analysis code, for olfactory conditioning
    experiments in Drosophila.
  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="toconnel@caltech.edu">Tom O'Connell</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>GPLv3</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/test</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend> -->

  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosserial_arduino</build_depend>
  <build_depend>rosserial_client</build_depend>
  <build_depend>stimuli</build_depend>
  <run_depend>rosserial_arduino</run_depend>
  <run_depend>rosserial_client</run_depend>
  <run_depend>rosserial_python</run_depend>
  <run_depend>multi_tracker</run_depend>
  <run_depend>metatools</run_depend>
  <run_depend>stimuli</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
